version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/ExternalData/FixedWidthImportSettings.rst.txt
.. vale off



:class:`FixedWidthImportSettings`
=================================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.ExternalData.FixedWidthImportSettings

   Bases: :py:obj:`object`


   
   defines how to import external data from a fixed-width source file.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: FixedWidthImportSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Clear`
            - 
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetEnumerator`
            - 
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~RemoveAt`
            - Removes the import definition at the specified index.
          * - :py:attr:`~ToString`
            - ToString method.
          * - :py:attr:`~UseColumn`
            - Add a column to be imported from the specified data source column index and configured


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AverageCornerNodesToMidsideNodes`
            - If set to Yes, the data at Midside nodes is calculated as average of data specified at corner nodes.
          * - :py:attr:`~ColumnWidths`
            - Gets or sets the specified column widths as a `string` using Fortran-esque fixed-format specifications.
          * - :py:attr:`~Count`
            - Gets the number of column definitions.
          * - :py:attr:`~Format`
            - Gets the existing corresponding format.
          * - :py:attr:`~Item`
            - Item property.
          * - :py:attr:`~SkipFooter`
            - Gets or sets the number of rows to ignore at the end of the file during import.
          * - :py:attr:`~SkipRows`
            - Gets or sets the number of rows to skip over at the start of the file during import.







Property detail
---------------
.. py:property:: AverageCornerNodesToMidsideNodes
   :type: Optional[bool]


   
   If set to Yes, the data at Midside nodes is calculated as average of data specified at corner nodes. 

   Defaults to False.

   This property is used only when there is another external data file defined with MAPDL import format. 















   ..
       !! processed by numpydoc !!

.. py:property:: ColumnWidths
   :type: Optional[str]


   
   Gets or sets the specified column widths as a `string` using Fortran-esque fixed-format specifications. 

   This is equivalent to the “User-Defined” format specifier for External Data as described in the product 
   documentation. 

   Note, however, that regardless of the format specifier all imported columns WILL be interpreted using the 
   .NET command `double.TryParse()` to support the requirements of the underlying variable data for Table. 

   In the example below, the line has one integer followed by four exponential data types. 
   385 8.333333333E-003 9.375000000E-003 3.375000000E-001 0.000000000E+000 
   The corresponding format is `1i3,4e17.9` 
   Where: 
   The first entry is the number of occurrences
   The second entry is the format specifier
   The third entry is the number of characters of data in the definition(including numeric values (0-9), 
   the letter 'e' (for instances of scientific notation), and any white space and + or - signs) 
   The fourth entry is the number of digits after the decimal point.















   ..
       !! processed by numpydoc !!

.. py:property:: Count
   :type: Optional[int]


   
   Gets the number of column definitions.
















   ..
       !! processed by numpydoc !!

.. py:property:: Format
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.ExternalData.ImportFormat]


   
   Gets the existing corresponding format.
















   ..
       !! processed by numpydoc !!

.. py:property:: Item
   :type: Optional[Ansys.Mechanical.ExternalData.ColumnarDataImportDefinition]


   
   Item property.
















   ..
       !! processed by numpydoc !!

.. py:property:: SkipFooter
   :type: Optional[int]


   
   Gets or sets the number of rows to ignore at the end of the file during import.
















   ..
       !! processed by numpydoc !!

.. py:property:: SkipRows
   :type: Optional[int]


   
   Gets or sets the number of rows to skip over at the start of the file during import.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Clear() -> None
   

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumerator() -> Iterator[Ansys.Mechanical.ExternalData.ColumnarDataImportDefinition]
   

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveAt(index: int) -> None

   
   Removes the import definition at the specified index.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!

.. py:method:: UseColumn(index: int, variableType: Ansys.Mechanical.DataModel.MechanicalEnums.ExternalData.VariableType, unit: str, name: str) -> Ansys.Mechanical.ExternalData.ColumnarDataSourceBase

.. code-block:: text

   Add a column to be imported from the specified data source column index and configured
   as the specified variable type. The order in which columns are added determines their
   order in the table/>.

   If unit is `null`, the default unit (in the active unit system) for the specified
   variable type will be assumed during import.

   If name is `null` or empty, a unique name will be generated from the specified
   variableType during import.

   A reference to the instance is returned so that invocations can be chained together.
..
       !! processed by numpydoc !!



.. vale on